--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -16,8 +16,8 @@ spring.datasource.password=P@ssword
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connection-timeout=60000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
