--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -23,3 +23,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 management.endpoint.env.show-values =always
+application.theme.color = dark
