--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -1,3 +1,4 @@
+spring.application.name=book-service
 
 #Enable Actuator
 management.endpoints.web.exposure.include=*
@@ -24,3 +25,4 @@ spring.jpa.show-sql=true
 
 management.endpoint.env.show-values =always
 application.theme.color = Bule
+
