--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -20,7 +20,7 @@ spring.datasource.password=P@ssword
 spring.datasource.hikari.maximum-pool-size=30
 spring.datasource.hikari.connection-timeout=60000
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 management.endpoint.env.show-values =always
